--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,28 @@
 {
-    "name": "PasswordLib/PasswordLib",
+    "name": "bolt/passwordlib",
     "type": "library",
-	"version": "1.0.0-beta1",
+	"version": "1.0.0",
     "description": "A Password Hashing Library",
     "keywords": ["password", "hash", "hashing", "random", "salt", "crypt"],
-    "homepage": "https://github.com/ircmaxell/PHP-PasswordLib",
+    "homepage": "https://github.com/bolt/PHP-PasswordLib",
     "license": "MIT",
     "authors": [
         {
             "name": "Anthony Ferrara",
             "email": "ircmaxell@ircmaxell.com",
-            "homepage": "http://blog.ircmaxell.com"
+            "homepage": "https://blog.ircmaxell.com"
+        },
+        {
+            "name": "Bob den Otter",
+            "email": "bob@bolt.cm",
+            "homepage": "https://bolt.cm"
         }
     ],
     "require-dev": {
         "mikey179/vfsStream": "1.1.*"
     },
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.5.9"
     },
     "autoload": {
         "psr-0": {
